5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1791_1618.log
== TEST (2019-05-29 14:23:50) 
-- CODE:
from numpy import*
vet =  array[a*x^2 + b*x + c]
saida = saida + str()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:33) 
-- CODE:
from numpy import*
str =  array[a*x^2 + b*x + c]
a = (" ")
b = (" ")
c = (" ")
saida = saida + str
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:57) 
-- CODE:
from numpy import*
str =  array[a*x^2 + b*x + c]
a = input(" ")
b = input(" ")
c = input(" ")
saida = saida + str
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:06) 
-- CODE:
from numpy import*
vet = array[ax^2 + bx + c]
a = input(" ")
b = input(" ")
c = input(" ")
saida = str()

saida = saida + str

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:44:28) 
-- CODE:
from numpy import* 
vetor = array[]
saida = str("")


-- EXECUTION TIME:
0.130255
-- ERROR:
  File "/home/codebench/codes/1791/1618/main.py", line 2
    vetor = array[]
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
